@@ -322,7 +322,6 @@ int ExultStudio::save_cont_window
 	)
 	{
 	cout << "In save_cont_window()" << endl;
-	unsigned char data[Exult_server::maxlength];
 					// Get container address.
 	unsigned long addr = (unsigned long) gtk_object_get_user_data(
 							GTK_OBJECT(contwin));
